increase gap on hero-box to fix the layout
Basically hero box was not taking 100% parent width then the page is in full screen
leaving 50px on the right of the parent.
The child are spaced-between without any margin. The parent of hero-box has 300px padding
on x-axis but that isn't cousing the issue.
I have done the same thing to header and it's working properly.

--- a/style.css
+++ b/style.css
@@ -39,13 +39,15 @@ button{
     justify-content: space-between;
     align-items: center;
     flex: 1 0 auto;
+    padding: 0;
+    margin: 0;
 }
 #hero-message, #hero-image{
     flex: 1;
 }
 #hero-box{
     display: flex;
-    gap: 50px;
+    gap: 100px;
 }
 #hero-message{
     display: flex;
